
- report fields can be of any type, just like report parameters and report variables. 
This simplifies working with JavaBean data sources where casting from java.lang.Object 
to the actual report field class is no longer required in the expressions;

- when using $P{REPORT_SCRIPTLET} in expressions, specific cast to the actual scriptlet
class is no longer needed;

- minor bug fixes and improvements;





JasperReports 0.6.8
-----------------------------------
- fixes the bug introduced in the 0.6.7 version related to the way
variables are incremented and group breaks estimated
(see http://sourceforge.net/tracker/index.php?func=detail&aid=1207897&group_id=36382&atid=416703);

- minor bug fixes and improvements;




JasperReports 0.6.7
-----------------------------------
- new REPORT_MAX_COUNT built-in parameter for limiting 
the number of rows in the data source;

- dots, spaces and other special characters allowed
in parameter, field and variable names;

- minor bug fixes and improvements;




JasperReports 0.6.6
-----------------------------------
- new "incrementType" and "incrementGroup" attributes added to allow 
incrementing variable values on page, column or group breaks and not
with every detail row;

- new "language" attribute added to allow writing report expressions 
in other languages, provided that a report compiler that knows how to 
interpret the specified language is used;

- new Groovy report compiler added as a sample to allow using the
Groovy language and its simplified syntax inside report expressions;

- the JRBshCompiler has been removed from the core library and provided
as a separate sample;

- minor bug fixes and improvements;




JasperReports 0.6.5
-----------------------------------
- JasperReports licensing model has been simplified and the library 
will be shipped only under the "GNU Lesser Public License" (LGPL);

- new "onErrorType" and "isLazy" attributes for image elements 