@@ -13,6 +13,8 @@ to the actual report field class is no longer required in the expressions;
 - when using $P{REPORT_SCRIPTLET} in expressions, specific cast to the actual scriptlet
 class is no longer needed;
 
+- new attribute "whenResourceMissingType" for customizing missing resource bundle behaviour
+
 - minor bug fixes and improvements;
 
 
